--- a/my-first-electron-app/package.json
+++ b/my-first-electron-app/package.json
@@ -5,7 +5,8 @@
     "main": "main.js",
     "scripts": {
         "start": "electron .",
-        "watch": "nodemon --exec electron ."
+        "watch": "nodemon --exec electron .",
+        "reset": "git reset --hard"
     },
     "keywords": [],
     "author": "",
